--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
+body {
+  background-color: #f1f5f8;
+}
+
 .App {
+  width: 100vw;
+  height: 100vh;
+}
+
+.container {
+  width: 1200px;
+  margin: 100px auto;
+}
+
+.top {
   text-align: center;
+  margin-bottom: 40px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.top h1 {
+  font-size: 40px;
+  font-weight: 800;
+  color: rgb(35, 35, 92);
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.top div {
+  margin: 0 auto;
+  width: 80px;
+  height: 4px;
+  background-color: #2caeba;
+  margin-top: 8px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.middle {
+  display: flex;
+}
+
+.navbar {
+  flex: 0 0 200px;
+  margin-right: 30px;
   display: flex;
   flex-direction: column;
+}
+
+.navbar button {
+  font-size: 1.4em;
+  background-color: #f1f5f8;
+  margin-bottom: 20px;
+  transition: 1s;
+  border: white;
+}
+
+.navbar button:hover {
+  cursor: pointer;
+  transition: 1s;
+  border-left: 3px solid #2caeba;
+  color: #2caeba;
+}
+
+.chosen {
+  border-left: 3px solid #2caeba !important;
+  transition: none !important;
+  color: #2caeba;
+}
+
+.note {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.note i {
+  color: #2caeba;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.note p {
+  margin-left: 30px;
+  color: rgb(86, 94, 119);
+  font-size: 1.2em;
+}
+
+.job .position {
+  margin: 0;
+  font-weight: 400;
+  color: rgb(63, 62, 62);
+}
+
+.job .title {
+  background-color: #dae2ec;
+  width: 85px;
+  text-align: center;
+  border-radius: 5px;
+  padding: 1px;
+  font-size: 20px;
+  color: #617d98;
+}
+
+.job .from-to {
+  color: #718cad;
 }
